--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/colors": "^3.0.0",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
@@ -35,6 +36,7 @@
     "eslint-config-next": "15.1.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-radix-colors": "^1.4.1",
     "typescript": "^5"
   }
 }
